<resources>
    <string name="app_name">Kusina Recipes</string>
    <string name="dish_name"><b>Beef Bourguignon</b></string>
    <string name="posted_by"><i>by Olivia Mesquita</i></string>
    <string name="ingredient"><b>Ingredients</b></string>
    <string name="ingredients">
 <em>FOR THE STEW:</em>\n
 \u2022 6 ounces thick cut bacon, diced\n
 \u2022 1 tablespoon olive oil\n
 \u2022 3 pounds lean stewing beef (preferably chuck), cut into 2 inch cubes and patted dry with a paper towel\n
 \u2022 1 large onion, peeled and sliced\n
 \u2022 1 large carrot, peeled and sliced\n
 \u2022 2 garlic cloves, minced\n
 \u2022 Salt and pepper to taste\n
 \u2022 1 tablespoon flour\n
 \u2022 1 750ml bottle full bodied, young red wine (*read the post for alternatives)\n
 \u2022 2 to 3 cups brown beef stock\n
 \u2022 1 tablespoon tomato paste\n
 \u2022 1 teaspoon thyme leaves\n
 \u2022 1 bay leaf\n
 \u2022 Garnish: chopped parsley\n\n
<em>FOR THE PEARL ONIONS:</em>\n
 \u2022 18 to 24 small white pearl onions\n
 \u2022 1 1/2 tablespoons olive oil\n
 \u2022 1 1/2 tablespoons butter\n
 \u2022 1/2 cup of beef broth\n
 \u2022 Salt and ground pepper to taste\n
 \u2022 1 bay leaf\n\n
     <em>FOR THE MUSHROOMS:</em>\n
 \u2022 1 pound fresh mushrooms, quartered\n
 \u2022 2 tablespoons butter\n
 \u2022 1 tablespoon oil\n
    </string>
    <string name="procedure"><b>Instructions</b></string>
    <string name="procedures">
1. Bring a pot of water to boil and add the bacon. Cook for 10 minutes, drain and dry with paper towels. (This step removes the excess salt/smoky flavor and renders some of the fat.)\n\n
2. Pre heat oven to 450 degrees.\n\n
3. In a large dutch oven (or ovenproof casserole), over medium heat, heat the oil and, once hot, saute the bacon for 2 to 3 minutes or until golden brown. Remove with a slotted spoon and reserve.\n\n
4. Increase the heat to medium high and, working in batches, brown the beef on all sides in the hot oil and bacon fat. Remove the browned beef and reserve.\n\n
5. In the same fat, add the onion and saute until it begins to brown, about 2 minutes. Add the garlic and carrots and continue sauteing for another couple minutes.\n\n
6. Return the bacon and the beef to the dutch oven and season everything with salt and pepper. Then, sprinkle the flour and toss to coat the meat. Transfer the dutch oven, uncovered, to the pre heated oven and let it cook for 4 minutes.\n\n
7. After 4 minutes, toss the meat once more and return the pot to the oven for 4 more minutes. (This process browns the flour and covers the meat with a light crust.)\n\n
8. Remove the dutch oven from the oven and turn the temperature down to 325 degrees.\n\n
9. Set the dutch oven on the stove again, over medium heat, and stir in the wine and the beef stock, so that the beef is barely covered. Now it\'s a good time to scrape any remaining browned bits off the bottom of the dutch oven, using a wooden spoon!\n\n
10. Add the tomato paste, the thyme and the bay leaf. Once it begins simmering, cover and transfer to the oven. Cook for 2 1/2 to 3 hours or until the meat is tender. The meat is done when a fork pierces it easily.\n\n
11. While the beef is cooking, prepare the onions and mushrooms.\n\n
12. Peeling pearl onions can be challenging, so here\'s a little trick: Bring a pot full of water to a boil. While the water is boiling, trim the root end of the onions. Then add the onions and blanch for about a minute. Transfer them to a bowl of ice water to stop the cooking. Pinch each onion at its stem end, and it should just slip out of its skin. If not, use a paring knife to remove the skin.\n\n
13. In a large skillet, over medium heat, heat the olive oil and the butter until they are bubbling. Add the onions and saute for about 10 minutes, stirring occasionally, until they are browned. Be careful not to break their skin!\n\n
14. Pour the beef broth, season to taste and add the bay leaf. Cover and simmer slowly for 40 to 50 minutes or until the onions are soft (but retain their shape) and the liquid has evaporated. Reserve.\n\n
15. Wipe out skillet and heat remaining oil and butter over medium high heat. Add the mushrooms and toss and shake pan for four to five minutes. As soon as they begin brown lightly, remove from heat.\n\n
16. When the beef is done, remove from oven and separate the sauce from the beef, bacon and carrots, using tongs Reserve.\n\n
17. Strain the sauce through a fine-meshed sieve set over a sauce pan. Skim fat off the sauce and simmer for a minute or two, skimming off additional fat as it rises. Cook until the sauce is thick enough to coat the back of a spoon. If too thick, add a few tablespoons of beef broth.\n\n
18. Transfer the meat and vegetables back to the dutch oven and pour the sauce over it.\n\n
19. Cover the dutch oven and simmer for 2 to 3 minutes, basting the meat and vegetables with the sauce several times.\n\n
20. Taste for seasoning and fix salt and pepper.\n\n
21. Garnish with chopped parsley and serve!\n\n
 </string>
    <string name="author2"><i>by Ingrid Beer</i></string>
    <string name="dish_name2"><b>Cassoulet</b></string>
    <string name="dish2Ingredients">
\u2022 8 ounces pancetta (or salt pork), cut into larger dice\n
\u2022 12 ounces pork sausage (garlic sausage, if you can find it), cut into 2” inch pieces\n
\u2022 4 bone-in and skin-on chicken thighs\n
\u2022 4 chicken drumsticks\n
\u2022 Salt\n
\u2022 Black pepper\n
\u2022 1 onion, dice\n
\u2022 2 dried bay leaves\n
\u2022 2 teaspoons Herbes de Provence\n
\u2022 8 large cloves garlic, pressed through garlic press\n
\u2022 3 tablespoons tomato paste\n
\u2022 ¼ cup white wine\n
\u2022 3 (15 ounce) cans organic cannellini beans, drained and rinsed\n
\u2022 1 ½ cups chicken stock\n
\u2022 1 small bundle thyme (broken up into a few sprigs), plus 1 teaspoon thyme leaves, divided use\n
\u2022 1 large sprig rosemary\n
\u2022 Crusty bread, to serve alongside\n</string>
    <string name="dish2procedures">
1. Begin by gathering and prepping all of your ingredients according to the ingredient list above to have ready and organized for use.\n\n
2. Preheat the oven to 350°.\n\n
3. Place a large, deep Dutch oven or pot over medium-high heat. Once hot, add in the diced pancetta and allow it to crisp for about 5 minutes. Remove from the pot and set aside for a moment.\n\n
4. Next, add in the chunks of pork sausage, and sear those for about 5 to 6 minutes, or until golden-brown. Remove those from the pot and set aside for a moment.\n\n
5. Season the chicken thighs and drumsticks with salt and pepper, and sear those in the pot for about 4 minutes per side, or until the skin is golden-brown. Remove from pot and set aside for a moment.\n\n
6. Wipe out a bit of fat from the pot leaving about 2 tablespoons worth. Add in the onion and saute for about 2 to 3 minutes, until softened. Add in the bay leaves and Herbes de Provence, along with the garlic, and stir those in until aromatic.\n\n
7. Stir in the tomato paste to incorporate, then pour in the white wine, allowing it bubble up for about 30 seconds.\n\n
8. Add in the cannellini beans and the chicken stock, and stir to combine. Bring to a simmer, then add back into the pot the sausage pieces and the pancetta, and nestle the chicken pieces into the pot. Scatter the bundle of thyme over top of the chicken (breaking up the bundle into smaller sprigs), and add the rosemary sprig as well.\n\n
9. Place the chicken cassoulet into the oven, uncovered, and cook for 1 hour, turning the pot halfway through the cooking for even browning.\n\n
10. Remove the chicken cassoulet from the oven and remove the thyme and rosemary sprigs, as well as the bay leaves. Allow it to sit for about 5 to 10 minutes (it will be very hot), then and sprinkle over top the 1 teaspoon of thyme leaves.\n\n
11. To serve, spoon either 1 thigh or 2 drumsticks into a shallow bowl, along with some of the saucy beans and the sausage, and enjoy with crusty bread on the side for dipping.\n\n
    </string>
    <string name="author3"><i>by Than</i></string>
    <string name="dish_name3"><b>Confit de Canard</b></string>
    <string name="dish3Ingredients">
\u2022 sea salt\n
\u2022 freshly cracked black pepper\n
\u2022 4 duck legs (thigh and drumstick attached)\n
\u2022 1 kg (2 lb) duck fat\n
\u2022 2 bay leaves\n
\u2022 4–6 sprigs of thyme\n
    </string>
    <string name="dish3procedures">
1. Rinse the duck legs under running water and pat dry with kitchen paper.\n\n
2. Melt the duck fat in a large saucepan that will hold the duck legs in a single layer. The duck fat should be at a temperature of 100°C/212°F.\n\n
3. Immerse the duck in the fat, add a few bay leaves and some sprigs of thyme.\n\n
4. You should have enough duck fat to just cover all of the duck legs. Keep in mind that, as the duck legs are cooking, they will render fat as well.\n\n
5. Cook the duck on a very low heat for about 2 hours until the meat falls off the bone easily. There should be barely a bubble seen in the oil during this time. An easier way to maintain a constant temperature is to place the saucepan into the oven (without fan) at 100°C/212°F.\n\n
6. Check regularly to make sure that the oil is not bubbling, otherwise you will end up deep-frying and drying out the duck legs.\n\n
7. To test if the duck is cooked to the right texture, carefully remove one duck leg to a plate with the skin side facing down. Test with a fork to see if the meat falls away from the bone easily.\n\n
    </string>
    <string name="author4"><i>by FOOD FOR NET</i></string>
    <string name="dish_name4"><b>Croque Monsieur</b></string>
    <string name="dish4Ingredients">
<b>For the Sandwiches:</b>\n
\u2022 6 Slices Sandwich Bread\n
\u2022 3-6 Slices Farmers Ham pan-fried\n
\u2022 3 Slices Gruyere Cheese\n
\u2022 3 Tablespoons Dijon Mustard\n
<b>For the Bechamel Sauce:</b>\n
\u2022 2 Tablespoons Butter\n
\u2022 2 Tablespoons Flour\n
\u2022 1.5 Cups Milk\n
\u2022 1/2 Cup Shredded Parmesan\n
    </string>
    <string name="dish4procedures">
<b>For the Bechamel Sauce:</b>\n
1. Melt butter in a saucepan.\n
2. Stir in the flour.\n
3. Whisk in the milk and simmer until thick.\n
4. Stir in the parmesan until fully melted.\n
5. Season with salt if needed. Set aside.\n\n
<b>For the Sandwiches</b>\n
1. Brush the slices of bread with butter on both sides and toast slightly in the oven.\n
2. Brush the toasted side of the bread with mustard. Layer in the ham and gruyere. Top with the other slice of bread.\n
3. Spread bechamel on top of the assembled sandwiches.\n
4. Gratinate until top is bubbly.\n
    </string>
    <string name="favorite_btn">Added</string>
    <string name="share_btn">Shared</string>
    <string name="menu_bar">Get Idea</string>
    <string name="menu_bar2">Recipe of the Day</string>
    <string name="menu_bar3">Popular</string>
    <string name="dish1">Beef \nBourguignon</string>
    <string name="dish2">Cassoulet</string>
    <string name="dish3">Confit de Canard</string>
    <string name="dish4">Croque Monsieur</string>
    <string name="deswoyn">*\t*\t*\t*\t*\t*\t*\t*\t*\t*\t*\t*\t*\t*\t*\t*\t*\t*\t*\t*</string>
    <string name="cook_time">Prep Time: 40mins\nReady in: 2 hours 30mins</string>
    <string name="cook_time2">Prep Time: 25mins\nReady in: 1 hour 30mins</string>
    <string name="cook_time3">Prep Time: 10mins\nReady in: 2 hours 20mins</string>
    <string name="cook_time4">Prep Time: 10mins\nReady in: 25mins</string>
    <string name="comment_tag">Comments</string>
    <string name="comment_name"><b>Macalinao, Arjay</b></string>
    <string name="comment_date">2 DAYS AGO</string>
    <string name="comment">That looks so delicious! Love love.</string>
    <string name="comment_reply_tag">REPLY</string>
    <string name="comment_hint">Write your comment here...</string>
    <string name="submit_btn">submit</string>
    <string name="cancel_btn">cancel</string>
</resources>