<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="0dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dish_image"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_margin="0dp"
                android:contentDescription="@string/dish_name"
                app:srcCompat="@drawable/beefbourguignon1" />

            <TextView
                android:id="@+id/dish_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="10dp"
                android:text="@string/dish_name"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/poster_name"
                android:text="@string/posted_by"
                android:layout_marginStart="@dimen/margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ingredient"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin"
                android:paddingEnd="@dimen/margin"
                android:text="@string/ingredients" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/procedure"
                android:textSize="20sp"
                android:textAlignment="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin"
                android:paddingEnd="@dimen/margin"
                android:text="@string/procedures"
                android:layout_margin="6sp"/>

        </LinearLayout>
    </ScrollView>


    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content" -->
    <!--        android:layout_below="@+id/dish_name">-->

    <!--    </ScrollView>-->


</androidx.constraintlayout.widget.ConstraintLayout>