<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="Morning"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:gravity="center" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Lunch"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Dinner"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Tea time"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center"/>

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="@dimen/margin_20"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/dish_1"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="fitStart"
                    android:src="@drawable/beefbourguignon1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/dish1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="italic" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/dish_2"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="fitStart"
                    android:src="@drawable/cassoulet_recipe_square" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="26dp"
                    android:text="@string/dish2"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="italic" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/dish_3"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="50dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="fitStart"
                    android:src="@drawable/confit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/dish3"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="italic" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/dish_4"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="50dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="fitStart"
                    android:src="@drawable/croque_monsieur" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/dish4"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="italic" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginTop="50dp"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>